@@ -2,6 +2,7 @@
 v4.1.1-git
 ----------
 
+[rla] Add system tasklist support for Nag CalDAV access (Request #12342).
 [jan] Fix task description tooltip (Bug #12421).
 [mjr] Persist the tasklist and parent when creating a new task and using "Save
       and New" (Bug: 12400).
